--- a/src/Components/Comingsoon/Comingsoon.scss
+++ b/src/Components/Comingsoon/Comingsoon.scss
@@ -1,6 +1,6 @@
 .bgimg {
     /* Background image */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url("https://i.pinimg.com/originals/f4/0c/aa/f40caa1d97c1e279e8641368716449c3.gif");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url("../../Pictures/swerve-backdrop.jpeg");
 
     /* Full-screen */
     height: 100%;
