--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Condiment&display=swap');
 body {
   box-sizing: border-box;
+  
 }
 /* .App {
   text-align: center;
