--- a/src/Components/Slideshow/Slideshow.scss
+++ b/src/Components/Slideshow/Slideshow.scss
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-size: 100% 100%;
-    height: 550px;
+    background-size: cover;
+    height: 650px;
     background-repeat: no-repeat;
     background-position: center;
   }
