--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -76,6 +76,10 @@
     animation-name: worldSpin;
     animation-iteration-count: infinite;
 }
+#home-latest-items {
+    display: flex;
+    flex-direction: column;
+}
 // IPAD
 @media only screen and (min-width: 768px) {
     #container {
