--- a/src/Components/PopularItems/PopularItems.scss
+++ b/src/Components/PopularItems/PopularItems.scss
@@ -2,11 +2,17 @@
     text-align: center;
     width:100%;
     height:70vh;
-    padding:12px;
+    margin: 10px 0;
         p.type {
             font-size:25px;
         }
         img {
             box-shadow: 0px 0px 10px 0px grey;
         }
+}
+@media only screen and (min-width: 1200px) {
+    #popular-cont {
+        width:50%;
+        height:auto;
+    }
 }
