--- a/src/Components/Products/Products.scss
+++ b/src/Components/Products/Products.scss
@@ -7,7 +7,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('https://newevolutiondesigns.com/images/freebies/hd-wallpaper-27.jpg');
+    background-image: url('https://dwrightportfolio.000webhostapp.com/Swerve/swerve-backdrop.jpeg');
 }
 #portfolio-nav {
     align-items: center;
@@ -89,7 +89,7 @@
         width:90%;
         position: relative;
         margin: 10px auto 10px auto;
-        height: 28vh;
+        height: 47vh;
         background-color: grey;
         box-shadow: 0px 0px 7px 2px grey;
     }
