--- a/src/Components/Products/Products.scss
+++ b/src/Components/Products/Products.scss
@@ -70,6 +70,7 @@
     color:white;
     position: absolute;
     top: 0;
+    text-align: center;
     padding-top:15%;
     width: 100%;
     height: 100%;
