--- a/src/Components/Product/Product.scss
+++ b/src/Components/Product/Product.scss
@@ -1,5 +1,6 @@
 #item-cont {
     min-height:90vh;
+    margin-left:6vw;
 }
 #item-box-1-cont {
     display: flex;
@@ -7,6 +8,7 @@
 }
 .item-box-1 {
     width:100%;
+    text-align:center;
 }
 .arrows {
     font-size: 40px;
@@ -49,9 +51,7 @@
     #item-box-1-cont {
         flex-direction: row;
     }
-    #item-cont {
-        margin-left:6vw;
-    }
+    
     .item-box-1 {
         h1 {
             text-align: left;
@@ -72,7 +72,7 @@
     }
     .item-box-1 {
         img {
-            width: 100%;
+            width: 80%;
             min-height: 60vh;
             max-height: 60vh;
         }
