--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Condiment&display=swap');
 body {
   box-sizing: border-box;
-  
+  background-color: #f9f9f9;
+  font-family: 'Almarai', sans-serif;
 }
 /* .App {
   text-align: center;
