--- a/src/Components/Products/Products.scss
+++ b/src/Components/Products/Products.scss
@@ -90,22 +90,21 @@
         width:90%;
         position: relative;
         margin: 10px auto 10px auto;
-        height: 47vh;
-        background-color: grey;
-        box-shadow: 0px 0px 7px 2px grey;
+        min-height: 47vh;
+        max-height: 80vh;
+        overflow: hidden;
     }
 }
 #item-cont {
-    a:hover > div + #modal {
-        display: block;
-        opacity:1;
+    a:hover {
+        opacity:0.1
     }
 }
-#item-cont {
-    a:hover > div {
-        opacity: 0.2;
-    }
-}
+// #item-cont {
+//     a:hover > div {
+//         opacity: 0.8;
+//     }
+// }
 @media only screen and (min-width: 600px) {
     #portfolio-cont {
         margin-left:6vw;
