--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -21,7 +21,8 @@
             flex-direction: column;
             justify-content: center;
             height:60vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Pictures/IMG_2905.JPG");
+            // background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Pictures/IMG_2905.JPG");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2016/11/22/19/08/blur-1850082_960_720.jpg");
             background-size: cover;
                 h1 {
                     margin-top:0;
@@ -80,14 +81,82 @@
     display: flex;
     flex-direction: column;
 }
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    display: flex;
+    flex-direction: column;
+    margin: 8% auto; /* 15% from the top and centered */
+    height:70vh;
+    border: 1px solid #888;
+    width: 90%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    position: fixed;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #modal-box-left {
+      width:100%;
+      height:40%;
+      background-image: url('https://cdn.pixabay.com/photo/2017/12/05/05/34/gifts-2998593_960_720.jpg');
+      background-position: center;
+      background-size: cover;
+  }
+  #modal-box-right {
+    width:100%;
+    text-align:center;
+    height:60%;
+    p:nth-child(1) {
+        font-size:32px;
+        text-decoration: underline;
+    }
+    p:nth-child(2) {
+        font-size:20px
+    }
+    input {
+        width:70%;
+        padding:20px;
+        font-size:22px;
+    }
+    .modal-btn {
+        width:80%;
+        padding:15px;
+        margin-top:1vh;
+    }
+  }
 // IPAD
 @media only screen and (min-width: 768px) {
     #container {
         min-height:100vh;
         margin-left:14vw;
         #home-landing-box {
-            height:150vh;
-            background-position: center;  
+            height:100vh;
+            // background-position: center;  
             background-repeat: no-repeat;
                 hr {
                     width:25%;
@@ -110,6 +179,22 @@
         margin-left:6vw;
             
     }
+    .modal-content {
+        flex-direction: row;
+    }
+    #modal-box-right {
+        p:nth-child(2) {
+            font-size:26px;
+            width:70%;
+            margin:auto;
+        }
+        input {
+            margin-top: 10vh;
+        }
+        .modal-btn {
+            margin-top:5vh;
+        }
+      }
     #home-qoute{
         .quote-cont {
             .home-icon-intro1 {
@@ -119,5 +204,19 @@
     } 
     #home-latest-items {
         flex-direction: row;
+    }
+    
+    #modal-box-left {
+        width:45%;
+        height:100%;
+        background-image: url('https://cdn.pixabay.com/photo/2017/12/05/05/34/gifts-2998593_960_720.jpg');
+        background-position: center;
+        background-size: cover;
+    }
+    #modal-box-right {
+      width:55%;
+      padding:5px;
+      text-align:center;
+      height:100%;
     }
 }
