--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 footer {
     width: 100%;
-    background-color: #09091c;
+    background-color:#808080;
     color: white;
     text-align: center;
     padding: 35px 0;
