--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Condiment&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 body {
   box-sizing: border-box;
-  background-color: #f9f9f9;
-  font-family: 'Almarai', sans-serif;
+  // background-color: #f9f9f9;
+  font-family: 'Montserrat', sans-serif;
 }
 /* .App {
   text-align: center;
 } */
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
