--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -1,9 +1,11 @@
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 350px;
+    width: 90%;
     margin: auto;
     text-align: center;
-    // font-family: arial;
+    color: black;
+    h1 {
+      font-size:24px;
+    }
   }
   
   .price {
