--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -1,3 +1,10 @@
+@media only screen and (max-width: 600px) {
+#contact-info-box {
+    #contactP {
+
+    }
+}
+}
 #contact-main {
     display: flex;
     flex-wrap: wrap;
@@ -7,18 +14,71 @@
 }
 #contact-cont {
     min-height: 90vh;
-    h1 {
-        margin:40px;
-        text-decoration: underline;
-    }
-    textarea {
-        font-size:20px;
-        width: 100%;
-        height:5vh;
-        margin:10px 0;
-        border:0;
-        padding:40px;
-        background-color: #f5f5f5;
+        h2 {
+            text-align: center;
+            font-size: 32px;
+        }
+    #contact-info-box {
+        margin:40px auto;
+        #contactP {
+            width:80%;
+            text-align: left;
+            display: block;
+            margin: auto;
+            min-height:25vh;
+        }
+        div {
+            width:100%;
+            text-align: center;
+            button {
+                position: relative;
+                left:25vw;
+            }
+            input {
+                width:70%;
+                margin:0px auto 20px auto;
+                padding:15px;
+                font-size: 16px;
+                color:grey;
+                border:1px solid grey;
+            }
+            textarea {
+                font-size:16px;
+                width: 65%;
+                height:5vh;
+                margin:10px 0;
+                padding:26px;
+            }
+        }
+        #main-contact-box {
+            // border:1px solid blue;
+            margin:15px auto;
+            min-height:30vh;
+            .main-contact-icon {
+                position: relative;
+                border: 1px solid #ccc;
+                width:24px;
+                padding:5px;
+                font-size: 20px;
+                top:5.5px;
+            }
+            span {
+                margin-left: 10px;
+                font-size: 15px;
+                position: relative;
+                top: 5px;        
+            }
+            .main-contact-box-divs {
+                margin-bottom: 10px;
+                height:5vh;
+                display: flex;
+                align-items: center;
+                margin-left: 10px;
+            }
+            .main-contact-p {
+
+            }
+        }
     }
 }
 .input3 {
@@ -41,10 +101,59 @@
     #contact-cont {
         margin-left:6vw;
         margin-top:0;
-        padding-top:10px;
         min-height:100vh;
-        h1 {
-            margin:20px 0 40px 0;
+        #contactP {
+            width:80%;
+            margin-left:0px;
+            text-align: left;
+            margin: revert !important;
+            p {
+                padding-top:10px;
+            }
+        }
+        h2 {
+            text-align: center;
+            font-size: 32px;
+        }
+        #contact-info-box {
+            margin:40px auto;
+            display: flex;
+            #main-contact-box {
+                #main-contact-p {
+                    border:1px solid red;
+                }
+            }
+            .half-boxes {
+                width:50vw;
+                position: relative;
+                // border: 1px solid blue;
+                text-align: center;
+                display: flex;
+                flex-wrap: wrap;
+                button {
+                    position: relative;
+                    left:1vw;
+                    bottom:0;
+                    margin-top:20px;
+                }
+                input {
+                    width:40%;
+                    margin:0px auto 20px auto;
+                    padding:15px;
+                    font-size: 16px;
+                    color:grey;
+                    border:1px solid grey;
+                }
+                textarea {
+                    font-size:16px;
+                    width: 87%;
+                    height:5vh;
+                    padding:26px;
+                    margin: 0 auto;
+                }
+            }
         }
     }
+    
+    
 }
