--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,12 +1,12 @@
 $header-bg: #09091c;
 $header-red: #86113b;
+$header-hair-bg: #8a3f17;
 #header {
-    min-height:5vh;
-    background-color: $header-bg;
+    min-height:10vh;
+    background-color: grey;
     position: sticky;
     top:0px;
-    z-index: 5;
-    transition: all 0.3s;
+    z-index: 16;
     // color:pink;
 }
 #ex {
@@ -14,7 +14,7 @@ $header-red: #86113b;
     display: flex;
     position: relative;
     align-items: center;
-    min-height:5vh;
+    min-height:10vh;
     .cart-logo {
         color: white;
         font-size: 24px;
@@ -24,10 +24,10 @@ $header-red: #86113b;
 #icon-cont {
     width:20%;
     font-size: 30px;
-    width: 20%;
+    width: 32%;
     font-size: 26px;
     position: absolute;
-    left: 40vw;
+    left: 42vw;
     padding-top: 10px;
     a {
         color:white;
@@ -98,7 +98,8 @@ color:white;
         }
     }
     #nav-links > a:hover {
-        transform: translateX(10px);
+        transform: translateY(-10px);
+        color:lightgrey;
     }
     #header {
         position: fixed;
