--- a/src/Components/Product/Product.scss
+++ b/src/Components/Product/Product.scss
@@ -1,91 +1,71 @@
-#item-cont {
-    min-height:90vh;
-}
-#product-options {
-    display:flex;
-    min-height:27vh;
-    width:100%;
-    background-color: lightgray;
-    text-align: center;
-    padding-top: 15px;
-    flex-direction: column;
-    div {
-        margin:5px 0;
-    }
-    span {
-        margin-left:10px;
-        font-size:20px;
-    }
-    select {
-        height:3vh;
-        font-size:15px;
-    }
-    input[type='text'] {
-        height:2vh;
-    }
-}
-#item-box-1-cont {
+#product-nav {
+    height: 20vh;
+    background-color: grey;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url('https://wallpaperaccess.com/full/318703.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 10px;
 }
-.item-box-1 {
-    width:100%;
-}
-.arrows {
-    font-size: 40px;
-    margin:10px 35px;
-}
-.item-box-1 {
-    img {
-        box-shadow: 0px 0px 12px 2px grey;
-        width: 80%;
-        margin-top: 20px;
-        min-height: 40vh;
-        max-height: 45vh;
-    }
-}
-.item-box-1 {
-    h1 {
-        margin:10px 0 5px 0;
-    }
-}
-#item-info {
-    min-height:30vh;
-    margin-top: 15px;
-}
-.makeStyles-root-1 {
-    background-color: #80808078 !important;
-    margin-bottom: 20px;
-}
-.colors {
-    margin:5px 5px;
-}
-@media only screen and (min-width: 600px) {
-    .item-box-1 {
-        width:50%;
-        position: relative;
-    }
-    #item-box-1-cont {
-        flex-direction: row;
-        margin-left:6vw;
-    }
-    
-    .item-box-1 {
-        h1 {
-            text-align: left;
-            margin:20px 0 5px 0;
+#product-cont {
+width:100vw;
+display: flex;
+flex-direction: column;
+    #product-box1 {
+        width:100vw;
+        text-align: center;
+        img {
+            width:90%;
+            margin:auto;
+            height:60vh;
         }
     }
-    
-    #item-info {
-        margin-top: 60px;
+    #product-box2 {
+        background-color: #fafafa;
+        display: flex;
+        flex-direction: column;
+        width:80%;
+        margin:20px auto 10px auto;
+        div:nth-child(1){
+            height:100px;
+            border-bottom:1px solid lightgrey;
+            padding:10px;
+            p {
+                font-size:22px;
+                font-weight: 700;
+            }
+        }
+        div:nth-child(2){
+            height:100px;
+            border-bottom:1px solid lightgrey;
+            padding:10px;
+        }
+        div:nth-child(3){
+            height:175px;
+            padding:10px;
+        }
     }
-    .item-box-1 {
-        img {
-            margin:auto;
-            width: 90%;
-            min-height: 80vh;
-            max-height: 80vh;
+}
+@media only screen and (min-width: 1050px) {
+    #product-main-cont {
+        margin-left:6vw;
+    }
+    #product-cont {
+        flex-direction: row;
+        width: 100%;
+        #product-box1{
+            width:50%;
+            img {
+                width:80%;
+                height:70vh;
+            }
+        }
+        #product-box2 {
+            width:50%;
+            margin: 0;
         }
     }
 }
