--- a/src/Components/Product/Product.scss
+++ b/src/Components/Product/Product.scss
@@ -27,25 +27,47 @@ flex-direction: column;
         background-color: #fafafa;
         display: flex;
         flex-direction: column;
-        width:80%;
+        width:90%;
         margin:20px auto 10px auto;
-        div:nth-child(1){
-            height:100px;
+        
+        #box1{
             border-bottom:1px solid lightgrey;
             padding:10px;
+            height:100px;
             p {
                 font-size:22px;
                 font-weight: 700;
+                margin-top: 10px;
+                padding:0;
             }
         }
-        div:nth-child(2){
-            height:100px;
+        #box2{
+            min-height:100px;
             border-bottom:1px solid lightgrey;
             padding:10px;
+             p {
+                 font-size:16px;
+             }
         }
-        div:nth-child(3){
+        #box3{
             height:175px;
             padding:10px;
+            #product-btns {
+                height:100%;
+                display: flex;
+                flex-direction: column;
+                button {
+                    width:100%;
+                    margin:5px auto;
+                }
+                #product-counter {
+                    height:20%;
+                    font-size:22px;
+                    border:1px solid black;
+                    display: flex;
+                    justify-content: space-between;
+                }
+            }
         }
     }
 }
@@ -59,13 +81,32 @@ flex-direction: column;
         #product-box1{
             width:50%;
             img {
-                width:80%;
-                height:70vh;
+                width:90%;
+                height:80vh;
             }
         }
         #product-box2 {
             width:50%;
             margin: 0;
+            position: relative; 
+            #product-btns {
+                width:98%;
+            }
+            //     display: flex;
+            //     flex-direction: column;
+            //     border:2px solid red;
+            //     #product-counter {
+            //         display: flex;
+            //         div:nth-child(1){
+            //             border:1px solid yellow;
+            //             height:100%;
+            //         }
+            //     }
+            //     button{
+            //         width:100%;
+            //         margin: 5px auto;
+            //     }
+            // }
         }
     }
 }
