--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -86,7 +86,7 @@
     flex-direction: column;
     margin: 15% auto 0 auto; /* 15% from the top and centered */
     height:70vh;
-    border: 1px solid #888;
+    // border: 1px solid #888;
     width: 90%; /* Could be more or less, depending on screen size */
   }
   
