--- a/src/Components/Product/Product.scss
+++ b/src/Components/Product/Product.scss
@@ -56,6 +56,14 @@ flex-direction: column;
                 height:100%;
                 display: flex;
                 flex-direction: column;
+                #extra-styles-cont {
+                    span {
+                        margin-right:10px;
+                    }
+                    select {
+                        padding:5px;
+                    }
+                }
                 button {
                     width:100%;
                     margin:5px auto;
