--- a/src/Components/Products/Products.scss
+++ b/src/Components/Products/Products.scss
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     // background-image: url('https://dwrightportfolio.000webhostapp.com/Swerve/swerve-backdrop.jpeg');
-    background-image: url('https://wallpaperaccess.com/full/318703.jpg');
+    background-image: url('https://images.wallpaperscraft.com/image/dark_spots_texture_background_50355_1600x1200.jpg');
 }
 #portfolio-nav {
     align-items: center;
