--- a/src/Components/Contact2/Contact.scss
+++ b/src/Components/Contact2/Contact.scss
@@ -1,9 +1,9 @@
 @media only screen and (max-width: 600px) {
-#contact-info-box {
-    #contactP {
+// #contact-info-box {
+//     #contactP {
 
-    }
-}
+//     }
+// }
 }
 #contact-main {
     display: flex;
@@ -44,8 +44,8 @@
             }
             textarea {
                 font-size:16px;
-                width: 65%;
-                height:5vh;
+                width: 96%;
+                height:15vh;
                 margin:10px 0;
                 padding:26px;
             }
@@ -75,9 +75,9 @@
                 align-items: center;
                 margin-left: 10px;
             }
-            .main-contact-p {
+            // .main-contact-p {
 
-            }
+            // }
         }
     }
 }
