--- a/src/Components/AddItemsLoader/AddItemsLoader.scss
+++ b/src/Components/AddItemsLoader/AddItemsLoader.scss
@@ -19,3 +19,12 @@
         font-size: 16px;
     }
 }
+@media only screen and (min-width: 768px) {
+    .main-cont {
+        height: 84vh;
+        margin-left: 6vw;
+        img {
+            width:15%
+        }
+    }
+}
