Updated Responsive Views

--- a/src/Components/Products/Products.scss
+++ b/src/Components/Products/Products.scss
@@ -142,6 +142,10 @@
             justify-content: start;
             a {
                 width:31%;
+                height:64vh;
+            }
+            #product-card {
+                height:60vh;
             }
         }
     }
