--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -9,7 +9,6 @@
             height:40vh;
         }
         #home-landing-box{
-            // border:2px solid red;
             display: flex;
             align-items: center;
             flex-direction: column;
@@ -19,13 +18,22 @@
             // background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Pictures/IMG_2905.JPG");
             background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Pictures/Home-BG.jpg");
             background-size: cover;
+                #home-shopnow-link {
+                    text-decoration: none;
+                }
                 h1 {
-                    margin-top:0;
+                    margin:10px;
                     color:white;
                 }
                 hr {
                     border:1px solid black;
                     width:70%;
+                }
+                .MuiButton-root {
+                    font-size:1.325rem;
+                }
+                .MuiButton-root:hover {
+                    background-color: green;
                 }
         }
 }
@@ -41,7 +49,11 @@
     display: flex;
     flex-direction: column;
     margin: 15px auto;
+    .quote-box:hover {
+        box-shadow: 0px 1px 20px #907c7c;
+    }
     .quote-box {
+        transition:all 0.3s linear;
         width: 70%;
         display: flex;
         margin: 10px auto;
@@ -50,7 +62,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: #fafafa;
+        background-color: #fafafa ;
         img {
             font-size: 14px;
         }
@@ -151,25 +163,29 @@
         min-height:100vh;
         margin-left:14vw;
         #home-landing-box {
-            height:100vh;
-            // background-position: center;  
+            height:100vh; 
             background-repeat: no-repeat;
                 hr {
-                    width:25%;
+                    width:35vw;
+                    margin-bottom: 4vh;
+                }
+                h1 {
+                    font-size:5vw;
                 }
         }
     }
     #home-qoute {
         flex-direction: row;
         padding: 5px;
-        
+        .quote-box {
+            width:30%;
+        }  
     }
 }
 // Laptop
 @media only screen and (min-width: 1050px) {
     #container {
         margin-left:6vw;
-            
     }
     .modal-content {
         flex-direction: row;
@@ -189,9 +205,11 @@
         }
       }
     #home-qoute{
+        justify-content: space-evenly;
       .quote-box {
           margin:10px;
-      }  
+          width:18%;
+      } 
     } 
     #home-latest-items {
         flex-direction: row;
