--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@100&display=swap');
 
+html {
+    scroll-behavior: smooth;
+  }
 #main-quote-div {
     margin:15px 0;
 }
