--- a/src/Components/Product/Product.scss
+++ b/src/Components/Product/Product.scss
@@ -138,8 +138,8 @@ border-bottom:1px solid grey;
     // background-color: lightgrey;
     display: flex;
     flex-direction: column;
-    margin: 8% auto 0 auto; /* 15% from the top and centered */
-    height:70vh;
+    margin: 3% auto 0 auto; /* 15% from the top and centered */
+    height:85vh;
     width: 100%; /* Could be more or less, depending on screen size */
         textarea {
             border-radius: 5px;
@@ -152,6 +152,10 @@ border-bottom:1px solid grey;
     position:absolute;
     right:3vw;
     font-weight: bold;
+  }
+  .close2:hover{
+    cursor: pointer;
+    color:orangered
   }
   .button2:hover {
     transform: scale(1.2);
@@ -193,7 +197,7 @@ border-bottom:1px solid grey;
     box-sizing: border-box;
     font-size: 26px;
     font-weight: 800;
-    margin: 45px 0 20px 0;
+    margin: 18px 0 20px 0;
     text-align: center;
     margin-bottom: 20px;
   }
