--- a/src/Components/CartItem/CartItem.scss
+++ b/src/Components/CartItem/CartItem.scss
@@ -1,6 +1,7 @@
 
 #cart-item-primary-cont {
     text-align: center;
+    margin-bottom: 30px;
     img {
         width:60%
     }
@@ -20,7 +21,7 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        width:90%;
+        width:100%;
         span {
             font-size: 18px;
         }
@@ -96,8 +97,11 @@
 // cart layout 2 
 @media only screen and (min-width: 768px) {
     #cart-item-primary-cont {
-        width:30%;
+        width:50%;
         margin:15px 0;
+        img {
+            height:20vh;
+        }
         #cart-item-delete-quantity-cont {
             #cart-item-product-counter {
                 width:45%;
