--- a/src/Components/SimilarItems/SimilarItems.scss
+++ b/src/Components/SimilarItems/SimilarItems.scss
@@ -1,12 +1,17 @@
 #popular-cont {
     text-align: center;
     width:100%;
-    height:70vh;
     margin: 10px 0;
         p.type {
             font-size:25px;
         }
         
+}
+@media only screen and (min-width: 600px) {
+    #popular-cont {
+        width:100%;
+        height:auto;
+    }
 }
 @media only screen and (min-width: 1200px) {
     #popular-cont {
